# scylla

./: Cargo.toml  docker-compose.yaml
.github/workflows/: push_to_mirror.yaml
apps/agent/: Cargo.toml
apps/agent/src/: command.rs  config.rs  constants.rs  error.rs  job.rs  main.rs  state.rs  websocket.rs
apps/server/: Cargo.toml  README.md  diesel.toml
apps/server/migrations/: 001_initial_schema.sql
apps/server/src/: agents_manager.rs  client_connection.rs  core.rs  main.rs  server.rs  server_config.rs
apps/server/src/agents/: agents_manager.rs  mod.rs
apps/server/src/api/: mod.rs
apps/server/src/api/v1/: mod.rs
apps/server/src/api/v1/common/: mod.rs  response_helpers.rs
apps/server/src/api/v1/controllers/: mod.rs
apps/server/src/api/v1/controllers/agent/: mod.rs
apps/server/src/api/v1/controllers/command/: mod.rs
apps/server/src/api/v1/controllers/pipeline/: mod.rs
apps/server/src/api/v1/controllers/root/: mod.rs
apps/server/src/api/v1/dto/: mod.rs
apps/server/src/api/v1/dto/command/: mod.rs
apps/server/src/api/v1/dto/common/: mod.rs
apps/server/src/api/v1/models/: example.rs  mod.rs
apps/server/src/api/v1/repositories/: mod.rs
apps/server/src/api/v1/repositories/base/: mod.rs
apps/server/src/api/v1/repositories/command/: mod.rs
apps/server/src/api/v1/services/: mod.rs
apps/server/src/api/v1/services/command/: mod.rs
apps/server/src/config/: constants.rs  core_config.rs  mod.rs
apps/server/src/core/: mod.rs
apps/server/src/database/: migrations.rs  mod.rs
libs/protocol/: Cargo.toml
libs/protocol/src/: lib.rs  pipeline_loader.rs
