[package]
name = "scylla-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
protocol = { path = "../../libs/protocol" }
serde_json = "1.0.140"
anyhow = "1.0.81"
futures = "0.3.31"
clap = { version = "4.5.4", features = ["derive"] }
