[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
toml = "0.8.22"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
async-trait = "0.1.88"